--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -2,6 +2,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One&family=Shadows+Into+Light&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One&family=Shadows+Into+Light&family=Sriracha&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2:'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -10,6 +18,7 @@
 html, body {
     min-height: 100vh;
     background-color: darkgrey;
+    font-family: var(--fonte1);
 }
 
 header {
@@ -23,15 +32,15 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
-    font-family: 'Passion One', cursive;
-    font-size: 10vh;
+    font-size: 10vw;
+    font-family: var(--fonte2);
 } 
 
 
 header > p {
     padding-bottom: 50px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
+    
+   
 }
 
 
@@ -51,6 +60,13 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
+}
+
+section > p {
+    padding-bottom: 2em;
+    
 }
 
 section.normal {
@@ -61,13 +77,35 @@ section.normal {
 section.imagem {
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6 px 13 px 0 px rgba(0, 0, 0, 0.411);
+    background-size: cover;
+    background-attachment: fixed;
 
 }
 
 section.imagem > p {
-    background-color: rgba(0, 0, 0, 0.205);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.425);
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.815);
+    
 }
+
+
+section#img1 {
+    background-image: url("../imagens/background001.jpg");
+    background-position: right center;
+    
+    
+}
+
+section#img2 {
+    background-image: url(../imagens/background002.jpg);
+    background-position: right center;
+    
+}
+
+
 
 footer {
     background-color: black;
